[project]
name = "sixg_radio_mgmt"
version = "1.0.0"
authors = [
  { name="Cleverson Nahum", email="cleversonahum@gmail.com" },
]
description = "6G communication environment for radio resource management."
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lasseufpa/sixg_radio_mgmt"
"Bug Tracker" = "https://github.com/lasseufpa/sixg_radio_mgmt/issues"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pyright]
include = ["./"]
useLibraryCodeForTypes = true